[package]
name = "day09"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
itertools = "0.10.0"
#indicatif = "0.16.0"
#regex = "1.5.4"
#once_cell = "1.7.2"
#once-cell-regex = "0.2.1"
