[package]
name = "day17"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
itertools = "0.10.0"
derive-new = "0.5.9"
once_cell = "1.7.2"
pipe-trait = "0.3.2"
