[package]
name = "day20"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
itertools = "0.10.0"
tap = "1.0.1"
once-cell-regex = "0.2.1"

[dev-dependencies]
indoc = "1.0"
